2003-12-03  Tim Legant  <tim@catseye.net>

	* AutoResponse.py (AutoResponse.__init__): Made msgin_as_string a
	member (instead of a local).  It was once a member, then switched
	to a local with the change of 2003-11-11.  Then the change of
	2003-11-16 used it in create, but it wasn't changed back to a
	member.

2003-11-19  Tim Legant  <tim@catseye.net>

	* Errors.py (AddressError, QueueError): In the last change I
	forgot to pass 'self' to the ancestor's __init__ method.  D'oh!
	Pointy-hat to me.

2003-11-16  Tim Legant  <tim@catseye.net>

	* AutoResponse.py (AutoResponse.__init__): Changed to re-parse the
	message only if AUTORESPONSE_INCLUDE_SENDER_COPY is 2 or greater,
	since that's the only case in which it matters.

	* Auth.py (Auth.init_auth_method): Cleaned up exception handling
	so that error messages could actually be read!

	* (Auth.init_remote): Fixed IMAP4_SSL class definition.
	Previously, it was defined as a local variable which just
	disappeared after init_remote() finished.  Now, we store it in an
	instance variable named IMAP4_SSL.  Also, fixed various code
	issues to bring it in line with the version distributed with
	Python 2.3.

	* Errors.py (AddressError, QueueError): Removed __repr__ method.
	Called ancestor's __init__.

	* (AuthError): Renamed __repr__ to __str__; cleaned it up.  Called
	ancestor's __init__.

2003-11-11  Tim Legant  <tim@catseye.net>

	* AutoResponse.py (AutoResponse.__init__): Recreate incoming
	message using the full email.Parser.Parser rather than the
	HeaderParser.  Substitute 'body suppressed" message if necessary
	before re-parsing.  This allows us to attach the message object to
	the auto-response and allows Generator to correctly produce a
	message in send(), even if the original message contained an
	attachment of type message/rfc822.

	(AutoResponse.create): Moved code checking message size to
	__init__.

2003-10-14  Jason R. Mastaler  <jason@mastaler.com>
